landing sudah login complete

--- a/Landing Page/Landing Sudah Login.html
+++ b/Landing Page/Landing Sudah Login.html
@@ -11,6 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/site.webmanifest">
 
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -76,6 +79,16 @@
             </li>
             <li class="nav-item pullUp" id="textnavitem">
                 <div class="kotak pullUp">
+                    <a class="nav-link" href="#" id="navigationWord">Logout</a>
+                </div>
+            </li>
+            <li class="nav-item pullUp" id="textnavitem">
+                <div class="kotak pullUp d-flex align-items-center justify-content-center">
+                    <i class="fa fa-user-circle" aria-hidden="true" style="vertical-align: middle;"></i>
+                </div>
+            </li>
+            <!-- <li class="nav-item pullUp" id="textnavitem">
+                <div class="kotak pullUp">
                     <a class="nav-link" href="#" id="navigationWord">Kandidat</a>
                 </div>
             </li>
@@ -83,12 +96,12 @@
                 <div class="kotak pullUp">
                     <a class="nav-link" href="#" id="navigationWord">Sign In</a>
                 </div>
-            </li>
-            <li class="nav-item pullUp" id="textnavitem">
+            </li> -->
+            <!-- <li class="nav-item pullUp" id="textnavitem">
                 <div class="">
                     <a class="nav-link" href="#" id="navigationWordSignUp">Sign Up</a>
                 </div>
-            </li>
+            </li> -->
         </ul>
         <!-- Links -->
     
@@ -98,7 +111,7 @@
     </nav>
 
     <div class="textUtama container d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000">
-        Selamat Datang,
+        Halo, Raul
     </div>
 
     <div class="container d-flex justify-content-center" data-aos="fade-up" data-aos-duration="1000">
