--- a/Base Navbar dan Footer/navbar.html
+++ b/Base Navbar dan Footer/navbar.html
@@ -11,6 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../Landing Page/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="../Landing Page/images/favicon/site.webmanifest">
 
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
