Fix directory modal

--- a/ModalSuccess.html
+++ b/ModalSuccess.html
@@ -57,7 +57,7 @@
             </div>
             <div class="modal-body">
               <div class="d-flex justify-content-center">
-                  <img src="../../images/success.png" alt="">
+                  <img src="images/success.png" alt="">
               </div>
               <div class="d-flex justify-content-center success">
                   <h2>akun kamu berhasil dibuat, silahkan cek email kamu.</h2>
