tambah admin login, tambah pemilihan, tambah kandidat, sisa final counter

--- a/Base Navbar dan Footer/navbar.html
+++ b/Base Navbar dan Footer/navbar.html
@@ -107,7 +107,7 @@
     <!-- Footer -->
     <div class="footer">
         <div class="container d-flex tulisanCopyright">
-            Copyright © 2020 Pemira IKM UI.
+            Copyright © 2020 Pemira IKM UI x Pemira IKM Fasilkom UI
         </div>
     </div>
 
