--- a/Landing Page/Landing Belum Login.html
+++ b/Landing Page/Landing Belum Login.html
@@ -275,7 +275,7 @@
 
     <div class="footer">
         <div class="container d-flex tulisanCopyright">
-            Copyright © 2020 Pemira IKM UI.
+            Copyright © 2020 Pemira IKM UI x Pemira IKM Fasilkom UI 
         </div>
     </div>
 
