--- a/CekNPM.html
+++ b/CekNPM.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 
     <style>
@@ -142,7 +143,7 @@
 <body>
     <h1>Cek Nomor Pokok Mahasiswa</h1>
     <form action="" method="">
-        <div class="container d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
             <div class="form">
                 <input type="text" name="name" autocomplete="off" required>
                 <label for="name" class="label-name">
@@ -153,7 +154,9 @@
                 </label>
             </div>
         </div>
-        <input type="button" class="btn" value="Check">
+        <div class=" d-flex justify-content-center">
+            <input type="button" class="btn btn-primary" value="Sign In">
+        </div>
     </form>
     <div class="login">
         <p>Already have an account? <span><a href="#" style="color: #898989;">Login here</a></span>
