--- a/ForgotPass.html
+++ b/ForgotPass.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="Images/LogoVertical.png" />
-    <title>Make Password</title>
+    <title>Reset Password</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,12 +21,15 @@
         }
 
         body {
-            height: 80vh;
+            height: 70vh;
             justify-content: center;
-            display: flex;
             align-items: center;
-            flex-direction: column;
             font-family: Lato;
+        }
+
+        .container {
+            margin-top: 10%;
+            margin-bottom: 5%;
         }
 
         h1 {
@@ -35,13 +38,12 @@
             font-weight: bold;
             font-size: 35px;
             line-height: 55px;
-            display: flex;
             align-items: center;
             text-align: center;
         }
 
         .form {
-            width: 300px;
+            width: 30%;
             position: relative;
             height: 80px;
             overflow: hidden;
@@ -76,7 +78,7 @@
             height: 100%;
             width: 100%;
             border-bottom: 4px solid #EE9F19;
-            transform: translateX(-150%);
+            transform: translateX(-100%);
             transition: transform 0.3s ease;
         }
 
@@ -99,13 +101,14 @@
             transform: translateX(0%);
         }
 
-        input[type=button] {
-            margin-top: 5%;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
+        .btn {
+            margin-top: 1%;
             background-color: #EE9F19;
             border: none;
+            justify-content: center;
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: 5%;
             color: white;
         }
 
@@ -114,17 +117,17 @@
         }
 
         .logo {
-            margin: 3% 0px;
+            margin: 10% auto;
         }
 
         .logo img {
             display: block;
             margin: auto;
-            width: 200px;
+            width: 60%;
         }
 
         .login {
-            margin-top: 2%;
+            margin-top: 5%;
         }
 
         p {
@@ -145,35 +148,37 @@
 </head>
 
 <body>
-    <h1>Buat Sandi</h1>
-    <form action="" method="">
-        <div class="container d-flex justify-content-center">
-            <div class="form">
-                <input type="password" name="name" autocomplete="off" required>
-                <label for="name" class="label-name">
-                    <span class="content-name">
-                        <i class="fa fa-lock"></i>
-                        &nbsp;&nbsp; Kata Sandi
-                    </span>
-                </label>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h1>Reset Password</h1>
+                <form action="" method="">
+                    <div class="d-flex justify-content-center">
+                        <div class="form">
+                            <input type="password" name="name" autocomplete="off" required>
+                            <label for="name" class="label-name">
+                                <span class="content-name">
+                                    <i class="fa fa-lock"></i>
+                                    &nbsp;&nbsp;Password</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <div class="form">
+                            <input type="password" name="name" autocomplete="off" required>
+                            <label for="name" class="label-name">
+                                <span class="content-name">
+                                    <i class="fa fa-lock"></i>
+                                    &nbsp;&nbsp;Confirm Password</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class=" d-flex justify-content-center">
+                        <input type="button" class="btn" value="Reset Password">
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="container d-flex justify-content-center">
-            <div class="form">
-                <input type="password" name="name" autocomplete="off" required>
-                <label for="name" class="label-name">
-                    <span class="content-name">
-                        <i class="fa fa-lock"></i>
-                        &nbsp;&nbsp; Ulangi Kata Sandi
-                    </span>
-                </label>
-            </div>
-        </div>
-        <input type="button" class="btn" value="Sign Up">
-    </form>
-    <div class="login">
-        <p>Already have an account? <span><a href="#" style="color: #898989;">Login here</a></span>
-        </p>
     </div>
 </body>
 
