--- a/SignIn.html
+++ b/SignIn.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 
     <style>
@@ -42,7 +43,7 @@
         }
 
         .form {
-            width: 50%;
+            width: 30%;
             position: relative;
             height: 80px;
             overflow: hidden;
@@ -138,6 +139,24 @@
             text-align: center;
             color: #222222;
         }
+
+        .btn{
+            width: 30%;
+        }
+
+        .forgot {
+            margin: 2%;
+        }
+
+        .forgot a{
+            font-family: Lato;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            /* identical to box height */
+            text-align: center;
+            color: #222222;
+        }
     </style>
 
 </head>
@@ -173,8 +192,12 @@
                         <input type="button" class="btn" value="Sign In">
                     </div>
                 </form>
+                <div class="forgot d-flex justify-content-center">
+                    <a href=""> Forgot Password ? </a>
+                </div>
                 <div class="login">
-                    <p>Don’t have an account? <span><a href="#" style="color: #898989;">Register here</a></span>
+                    <p>
+                        Don’t have an account? <span><a href="#" style="color: #898989;">Register here</a></span>
                     </p>
                 </div>
             </div>
